--- a/index.html
+++ b/index.html
@@ -72,14 +72,13 @@
       </section>
       <section class="position-relative pt-md-8 pt-6 box-bg01">
         <div class="box-bg04"></div>
-        <div class="container">
-          <div class="row">
+       
             <div class="col-12">
               <div class="h2 fw-bold text-center mb-5" data-aos="fade-up">
                 三大平台，我來搞定
               </div>
               <div class="container">
-                <div class="row d-flex" data-aos="fade-up">
+                <div class="row" data-aos="fade-up">
                   <div class="col-12 col-md-4 text-center">
                     <img
                       src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/chatTalker_images/messenger.svg"
@@ -112,8 +111,7 @@
                 </div>
               </div>
             </div>
-          </div>
-        </div>
+         
       </section>
 
       <section class="position-relative">
